--- a/CRUD_API/package.json
+++ b/CRUD_API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.2",
     "nodemon": "^3.1.10"
