--- a/YOUTUBE/package.json
+++ b/YOUTUBE/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "mongoose": "^8.16.3",
     "nodemon": "^3.1.10"
   },
