--- a/CourseSelling/Backend/package.json
+++ b/CourseSelling/Backend/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "mongoose": "^8.16.4",
     "nodemon": "^3.1.10"
   },
