--- a/CourseSelling/Backend/package.json
+++ b/CourseSelling/Backend/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "mongoose": "^8.16.4",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "zod": "^4.0.5"
   },
   "name": "backend",
   "version": "1.0.0",
